--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "auto-release-action",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "branch develop to release and create pull request to master",
+  "module": "dist/es5/main.mjs",
   "scripts": {
     "dev": "ts-node src/main.ts",
-    "build": "tsc src/main.ts"
+    "build": "rimraf ./dist && rollup -c"
   },
   "author": "Russel Yang",
   "license": "ISC",
@@ -13,6 +13,14 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "ts-node": "^9.0.0",
+    "tslib": "^2.0.3",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.33.0"
   }
 }
